Fix horizontal overflow

--- a/assets/style_sheets/common/card.css
+++ b/assets/style_sheets/common/card.css
@@ -26,6 +26,7 @@ html {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-bottom: 160px;
     margin-top: 60px;
+    overflow-x: hidden;
 }
 
 html.dark .card {
